--- a/templates/devenv/0/docker-compose.yml
+++ b/templates/devenv/0/docker-compose.yml
@@ -1,9 +1,9 @@
 volumes:
   ubuntu-openssh-home: {}
-ubuntu-openssh:
-  image: "templesofsyrinx/ubuntu-sshd:18.04"
-  ports:
+services:
+  ubuntu-openssh:
+    image: "templesofsyrinx/ubuntu-sshd:18.04"
+    ports:
     - "$PORT:2222"
-  volumes:
+    volumes:
     - ubuntu-openssh-home:/home
-
