Changed volume to use long type description

--- a/templates/devenv/0/docker-compose.yml
+++ b/templates/devenv/0/docker-compose.yml
@@ -7,4 +7,8 @@ services:
     ports:
     - "$PORT:2222"
     volumes:
-    - "ubuntu-openssh-home:/home"
+      - type: volume
+        source: ubuntu-openssh-home
+        target: /home
+        volume:
+          nocopy: true
