Update compose to quote type

--- a/templates/devenv/0/docker-compose.yml
+++ b/templates/devenv/0/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
     - "$PORT:2222"
     volumes:
-      - type: volume
+      - type: "volume"
         source: ubuntu-openssh-home
-        target: "/home"
+        target: /home
