--- a/templates/devenv/config.yml
+++ b/templates/devenv/config.yml
@@ -1,5 +1,9 @@
-name: Unbuntu Open SSH Daemon
+name: Ubuntu Open SSH Daemon
 description: |
-  Ubuntu server running with OpenSSH Damon rfor Visual Studio Code Remote: SSH Development
+  Ubuntu server running with OpenSSH Damon for Visual Studio Code Extension Remote: SSH Development
+  Start a shell in the container and execute these commands:
+  # adduser <username>  (follow the prompts)
+  # mkdir -m 700 /home/<username>/.ssh  (prepare the ssh directory)
+  # chown <username>:<usergroup> /home/<username>/.ssh
 version: 18.04
 category: Development
