--- a/templates/devenv/config.yml
+++ b/templates/devenv/config.yml
@@ -2,6 +2,6 @@ name: Ubuntu Open SSH Daemon
 description: |
   Ubuntu server running with OpenSSH Damon for Visual Studio Code Extension Remote: SSH Development
 version: 18.04
-category: Development
+category: Applications
 maintainer: "Temples of Syrinx <TOS@gmail.com>"
 projectURL: https://github.com/TemplesOfSyrinx/ubuntu-sshd
